Cannot unset transition with important https://bugs.webkit.org/show_bug.cgi?id=177684

Patch by Rob Buis <rbuis@igalia.com> on 2018-05-18
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Import manually the updated test and result.

* web-platform-tests/cssom/cssom-setProperty-shorthand-expected.txt:
* web-platform-tests/cssom/cssom-setProperty-shorthand.html:

Source/WebCore:

Make removeProperty remove the property regardless
if it was set using !important [1].

The new behavior is consistent with Firefox, Chrome and Edge.

[1] https://drafts.csswg.org/cssom/#dom-cssstyledeclaration-removeproperty

Test: web-platform-tests/cssom/cssom-setProperty-shorthand.html

* css/StyleProperties.cpp:
(WebCore::MutableStyleProperties::removePropertiesInSet):

Canonical link: https://commits.webkit.org/201258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231995 268f45cc-cd09-0410-ab3c-d52691b4dbfc